--- a/.github/workflows/globally-load-balanced-web-servers-pr-check.yaml
+++ b/.github/workflows/globally-load-balanced-web-servers-pr-check.yaml
@@ -3,10 +3,10 @@ on:
   pull_request:
     paths:
       - 'reference-architectures/globally-load-balanced-web-servers/**/*.tf'
-      - 'reference-architectures/globally-load-balanced-web-servers/test/*'
+      - 'reference-architectures/globally-load-balanced-web-servers/test/**/*'
 
 jobs:
   call-common:
-    uses: .github/workflows/workflow-terraform-pr-check.yaml
+    uses: ./.github/workflows/workflow-terraform-pr-check.yaml
     with:
       module_path: reference-architectures/globally-load-balanced-web-servers
