--- a/.github/workflows/workflow-terraform-pr-check.yaml
+++ b/.github/workflows/workflow-terraform-pr-check.yaml
@@ -25,14 +25,21 @@ jobs:
     container: ghcr.io/terraform-linters/tflint
     steps:
       - uses: actions/checkout@v4
-      - name: TFLint
+      - name: Write TFLint config
         working-directory: ${{ inputs.module_path }}
         run: |
-          cat > .tflint.hcl <<EOF
-          plugin "terraform" { enabled = true; preset = "all" }
+          cat <<EOF > .tflint.hcl
+          plugin "terraform" {
+            enabled = true
+            preset  = "all"
+          }
           EOF
+
+      - name: Run TFLint
+        working-directory: ${{ inputs.module_path }}
+        run: |
           tflint --init
-          tflint --recursive
+          tflint
 
   terratest:
     needs: validate
