--- a/.github/workflows/workflow-terraform-integration-test.yaml
+++ b/.github/workflows/workflow-terraform-integration-test.yaml
@@ -1,18 +1,19 @@
-name: globally-load-balanced-web-servers Apply-Destroy
+# This is a reusable workflow called from the other workflows.
+# Centralizing in this way allows us to have one place to configure our tests.
 on:
-  schedule:
-    - cron: "*/15 * * * *"
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      module_path:
+        required: true
+        type: string
 
 jobs:
-  apply-destroy:
+  integration-test:
     runs-on: ubuntu-latest
     env:
       DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.TEST_DIGITALOCEAN_ACCESS_TOKEN }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: use-tf-module-library
       - uses: actions/setup-go@v5
         with:
           go-version: "1.24"
