--- a/.github/workflows/globally-load-balanced-integration-test.yaml
+++ b/.github/workflows/globally-load-balanced-integration-test.yaml
@@ -1,7 +1,7 @@
 name: globally-load-balanced-web-servers Apply-Destroy
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 2 * * *"
   workflow_dispatch:
 
 jobs:
