--- a/.github/workflows/workflow-terraform-pr-check.yaml
+++ b/.github/workflows/workflow-terraform-pr-check.yaml
@@ -16,30 +16,17 @@ jobs:
       - name: Init & Validate
         working-directory: ${{ inputs.module_path }}
         run: |
-          terraform init -backend=false
-          terraform validate
-          terraform fmt -check -recursive
+          make tf-validate
 
   tflint:
     runs-on: ubuntu-latest
     container: ghcr.io/terraform-linters/tflint
     steps:
       - uses: actions/checkout@v4
-      - name: Write TFLint config
-        working-directory: ${{ inputs.module_path }}
-        run: |
-          cat <<EOF > .tflint.hcl
-          plugin "terraform" {
-            enabled = true
-            preset  = "all"
-          }
-          EOF
-
       - name: Run TFLint
         working-directory: ${{ inputs.module_path }}
         run: |
-          tflint --init
-          tflint
+          make tf-validate tflint
 
   terratest:
     needs: validate
@@ -57,4 +44,4 @@ jobs:
       - name: Run tests
         working-directory: ${{ inputs.module_path }}/test/unit
         run: |
-          if [ -d "." ]; then go test ./...; else echo "No tests"; fi
+          if [ -d "." ]; then make test-unit; else echo "No tests"; fi
