--- a/.github/workflows/workflow-terraform-pr-check.yaml
+++ b/.github/workflows/workflow-terraform-pr-check.yaml
@@ -6,6 +6,9 @@ on:
       module_path:
         required: true
         type: string
+    secrets:
+      DIGITALOCEAN_ACCESS_TOKEN:
+        required: true
 
 
 jobs:
@@ -16,7 +19,7 @@ jobs:
       image: registry.digitalocean.com/scale-with-simplicity-test/terraform-test:latest
       credentials:
         username: solutions@digitalocean.com
-        password: ${{ secrets.TEST_DIGITALOCEAN_ACCESS_TOKEN }}
+        password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,7 +34,7 @@ jobs:
       image: registry.digitalocean.com/scale-with-simplicity-test/terraform-test:latest
       credentials:
         username: solutions@digitalocean.com
-        password: ${{ secrets.TEST_DIGITALOCEAN_ACCESS_TOKEN }}
+        password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
