--- a/.github/workflows/workflow-terraform-integration-test.yaml
+++ b/.github/workflows/workflow-terraform-integration-test.yaml
@@ -7,6 +7,10 @@ on:
         required: true
         type: string
     secrets:
+      AWS_ACCESS_KEY_ID:
+        required: false
+      AWS_SECRET_ACCESS_KEY:
+        required: false
       DIGITALOCEAN_ACCESS_TOKEN:
         required: true
 
@@ -20,6 +24,8 @@ jobs:
         username: solutions@digitalocean.com
         password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     env:
+      AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID || '' }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY || '' }}
       DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     steps:
       - name: Checkout code
