Pass in creds to PR check so that API calls can be made for DO and AWS Data

--- a/.github/workflows/site-to-site-vpn-aws-pr-check.yaml
+++ b/.github/workflows/site-to-site-vpn-aws-pr-check.yaml
@@ -11,4 +11,6 @@ jobs:
     with:
       module_path: reference-architectures/site-to-site-vpn-aws
     secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.SOLUTIONS_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.SOLUTIONS_AWS_SECRET_ACCESS_KEY }}
       DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.TEST_DIGITALOCEAN_ACCESS_TOKEN }}
