--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+terraform.tfvars
+
 
 # Ignore lock files
 .terraform.lock.hcl 
