feat: comprehensive repository improvements
- Add pre-commit hooks for automated code quality checks
- Enhance security with Trivy and Checkov scanning workflows
- Add Dependabot for automated dependency updates
- Improve developer experience with comprehensive Makefile
- Add GitHub templates for issues and pull requests
- Enhance linting configuration with additional TFLint rules
- Update documentation with better formatting and structure
- Add CODEOWNERS file for better code review process
- Improve .gitignore with comprehensive patterns
- Fix Go version in test module to stable release
- Add YAML and Markdown linting configurations

These improvements enhance code quality, security, and developer experience
while maintaining the existing functionality of the reference architectures.

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,37 @@ override.tf.json
 terraform.rc
 terraform.tfvars
 
-
 # Ignore lock files
-.terraform.lock.hcl 
+.terraform.lock.hcl
 
-#Misc
+# Test output
 *.out
+*.test
+coverage.out
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Backup files
+*.bak
+*.backup
+
+# Log files
+*.log
