fix: run go mod tidy and add go mod check to lint
Recent dependency updates caused go.mod/go.sum to be out of sync,
breaking the vllm-nfs and globally-load-balanced-web-servers
integration tests.

This commit:
- Runs go mod tidy on all RA and module test directories
- Adds go-mod-tidy-check.sh script to verify go.mod/go.sum are in sync
- Updates all Makefiles to include go-mod-check in the lint target

This ensures go mod tidy issues are caught at PR check time.

--- a/modules/glb-stack/Makefile
+++ b/modules/glb-stack/Makefile
@@ -10,8 +10,12 @@ tf-validate:
 tflint:
 	@$(TEST_SCRIPT_DIR)/tflint.sh
 
+.PHONY: go-mod-check
+go-mod-check:
+	@cd test && $(TEST_SCRIPT_DIR)/go-mod-tidy-check.sh
+
 .PHONY: lint
-lint: tf-validate tflint
+lint: tf-validate tflint go-mod-check
 
 .PHONY: test-unit
 test-unit:
