--- a/modules/ipsec-gateway/Makefile
+++ b/modules/ipsec-gateway/Makefile
@@ -10,8 +10,12 @@ tf-validate:
 tflint:
 	@$(TEST_SCRIPT_DIR)/tflint.sh
 
+.PHONY: go-mod-check
+go-mod-check:
+	@cd test && $(TEST_SCRIPT_DIR)/go-mod-tidy-check.sh
+
 .PHONY: lint
-lint: tf-validate tflint
+lint: tf-validate tflint go-mod-check
 
 .PHONY: test-unit
 test-unit:
