--- a/reference-architectures/nat-gateway/Makefile
+++ b/reference-architectures/nat-gateway/Makefile
@@ -17,8 +17,12 @@ tf-validate: tf-validate-infra tf-validate-routes
 tflint:
 	@cd terraform && $(TEST_SCRIPT_DIR)/tflint.sh
 
+.PHONY: go-mod-check
+go-mod-check:
+	@cd test && $(TEST_SCRIPT_DIR)/go-mod-tidy-check.sh
+
 .PHONY: lint
-lint: tf-validate tflint
+lint: tf-validate tflint go-mod-check
 
 .PHONY: test-unit
 test-unit:
