feat: integrate deepsix for nightly resource cleanup

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -9,7 +9,9 @@ RUN apk add --no-cache \
     git \
     ca-certificates \
     bash \
-    openssh-client
+    openssh-client \
+    jq \
+    gcompat
 
 # Install Terraform
 ARG TERRAFORM_VERSION=1.11.4
@@ -30,6 +32,21 @@ ARG KUBECTL_VERSION=v1.32.0
 RUN curl -LO "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl" \
  && chmod +x kubectl \
  && mv kubectl /usr/local/bin/kubectl
+
+# Install deepsix (from private GitHub release)
+ARG GITHUB_TOKEN
+ARG DEEPSIX_VERSION=v0.9.1
+RUN ASSET_URL=$(curl -sL \
+      -H "Authorization: token ${GITHUB_TOKEN}" \
+      -H "Accept: application/vnd.github.v3+json" \
+      "https://api.github.com/repos/DO-Solutions/deepsix/releases/tags/${DEEPSIX_VERSION}" \
+      | jq -r '.assets[] | select(.name == "deepsix-linux-amd64") | .url') \
+ && curl -sL \
+      -H "Authorization: token ${GITHUB_TOKEN}" \
+      -H "Accept: application/octet-stream" \
+      "${ASSET_URL}" \
+      -o /usr/local/bin/deepsix \
+ && chmod +x /usr/local/bin/deepsix
 
 # Set up workdir and environment
 WORKDIR /workspace
